--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -19,4 +19,4 @@ jobs:
       - name: execute Jar
         run: java -jar ./artifacts/app-card-delivery.jar &
       - name: Build with Gradle
-        run: ./gradlew test -Dselenide.headless=true
+        run: ./gradlew test --info -Dselenide.headless=true
